Fix that weird overlapping CSS bug in Empire plots (#416)
* BUG: fix #356

Also make the Emperor samples selected msg look pretty

* On second thought don't bump up the z-index

having the 'samples copied to clipboard' msg be "under" the border
is nice, but this messes up a ton of empress' z-indices. not worth
spending time un-messing-up today.

* DOC: update readme empire screenshots re: #356 fix

so now they don't look gross :D

* DOC: update empire fancy screenshot

* DOC: show body site summary in fancy screenshot

* Document intuition with ignore absent tips

--- a/empress/support_files/css/empress.css
+++ b/empress/support_files/css/empress.css
@@ -298,9 +298,16 @@ select:-moz-focusring {
     float: left;
     border-right: 2px solid black;
     /* Having this z-index puts this above the Emperor div, which is useful
-   * because it lets us draw the border-line above over Emperor
-   */
+     * because it lets us draw the border-line over Emperor.
+     */
     z-index: 1;
+}
+
+/* Hide scrollbars being created that mess up the page layout: see
+ * https://github.com/biocore/empress/issues/356 for morbid details.
+ */
+#emperor-in-empire {
+    overflow: hidden;
 }
 
 /* Convenience class for preventing user selection
